# cli

./: .gitignore  CMakeLists.txt  README.md  cli.c  cli.h  test.cpp  test_public.cpp
.github/workflows/: cmake-single-platform.yml  test.yml
cmake/: cpm.cmake
examples/: example.c
include/cli/: cli.h
